--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,6 +11,7 @@
 /* container in the list */
 .list-Container {
   margin-top: 70px;
+  margin-bottom: 100px;
 }
 
 .list-group-item-heading {
@@ -21,6 +22,15 @@
 .list-group-item-text {
   margin-left: 47px;
 }
+/* Remove Button */
+.remove-btn {
+  margin-right: 20px;
+  border-radius: 48%;
+}
+/* Register.js */
+.register {
+  margin-top: 80px;
+}
 /*  */
 img {
   width: 100%;
@@ -28,11 +38,11 @@ img {
 
 .landing {
   position: relative;
-  background: url("./img/showcase.jpg") no-repeat;
+  background: url("./img/david-marcu-114194-unsplash.jpg") no-repeat;
   background-size: cover;
   background-position: center;
   height: 100vh;
-  margin-top: -24px;
+  /* margin-top: -24px; */
   margin-bottom: -50px;
 }
 
@@ -41,7 +51,7 @@ img {
 }
 
 .dark-overlay {
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0);
   position: absolute;
   top: 0;
   left: 0;
@@ -62,7 +72,76 @@ img {
   color: #bbb !important;
 }
 
-/* Shopping List */
-.remove-btn {
-  margin-right: 20px;
+/* Landing */
+.display-3 {
+  margin-bottom: 50px;
+}
+
+.landing .container {
+  margin-top: 30px;
+}
+
+.landing-btn {
+  background-color: orange;
+}
+
+/* Footer */
+footer {
+  opacity: 0.5;
+}
+
+.footer-overlay {
+  background-color: rgba(0, 0, 0, 0);
+  /* position: absolute; */
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 5%;
+  padding: 13px 0;
+}
+
+/* My Profile */
+/* ------ section --------- */
+.section-container {
+  /* margin-top: 100px; */
+}
+.section-container section {
+  /* margin-bottom: 150px; */
+}
+
+section h2 {
+  padding-top: 80px;
+}
+
+.section-1 {
+  margin-top: 20px;
+}
+
+/* aside */
+.aside {
+  position: fixed;
+  left: 30px;
+  top: 100px;
+}
+.aside-list {
+  box-shadow: 5px 5px 30px beige;
+  border: 1px solid beige;
+  padding: 30px 30px 30px 50px;
+}
+
+.aside-list li {
+  padding-left: 10px;
+  list-style: decimal;
+}
+
+.aside-item {
+  color: black;
+  text-decoration: none;
+  background-color: transparent;
+}
+
+/* all containers */
+
+.page-container {
+  margin-top: 80px;
 }
