--- a/client/src/App.css
+++ b/client/src/App.css
@@ -188,3 +188,30 @@ section h2 {
 .btn-list {
   position: absolute;
 }
+
+/****************** My Profile *****************/
+
+.date-input {
+  width: 50%;
+}
+
+.form-skill-set {
+  max-width: 920px;
+}
+
+.form-container {
+  border: 1px solid red;
+}
+
+.form-group {
+  position: relative;
+}
+
+.click-icon {
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  right: 150px;
+  top: 45px;
+  cursor: pointer;
+}
